--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,17 @@ h3 {
   line-height: 1em;
 }
 
+h4 {
+  font-size: 30px;
+  font-weight: 300;
+  line-height: 1em;
+  margin: 50px 0 30px;
+}
+
+ul li {
+  margin-bottom: 10px;
+}
+
 main {
   box-sizing: border-box;
   padding: 25px 0;
@@ -115,7 +126,7 @@ a {
 }
 
 footer {
-  margin-top: 40px;
+  margin-top: 30px;
   background-color: #f5f5f5;
   padding: 20px 0;
   font-size: 15px;
